--- a/classes/cleric.html
+++ b/classes/cleric.html
@@ -5,15 +5,7 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<title>Old School Essentials - toki pona</title>
 
-    <style>
-        table, td, td, th {
-            border: 1px solid;
-        }
-
-        table {
-            border-collapse: collapse;
-        }
-    </style>
+    <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
     <h1>Cleric</h1>
