lots and lots of changes!!!

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- WIP -->
+<!-- WIP TRANSLATING... -->
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
@@ -106,30 +106,46 @@
 				<a href="/running-adventures/awarding-xp.html">Awarding XP</a>
 			</div>
 		</div>
-
 		<div class="dropdown">
 			<button class="dropbtn">
 				Monsters
 			</button>
 			<div class="dropdown-content">
-				<!-- TODO -->
+				<a href="/monsters/general.html">General</a>
+				<a href="/monsters/descriptions.html">Monster Descriptions</a>
+				<a href="/monsters/dungeon-encounters.html">Dungeon Encounters</a>
+				<a href="/monsters/wilderness-encounters.html">Wilderness Encounters</a>
+				<a href="/monsters/adventuring-parties.html">Adventuring Parties</a>
+				<a href="/monsters/stronghold-encounters.html">Stronghold Encounters</a>
+			</div>
+		</div>
+
+		<div class="dropdown">
+			<button class="dropbtn">
+				Treasures
+			</button>
+			<div class="dropdown-content">
+				<a href="/treasures/placing-treasure.html">Placing Treasure</a>
+				<a href="/treasures/treasure-types.html">Treasure Types</a>
+				<a href="/treasures/gems-and-jewellery.html">Gems and Jewellery</a>
+				<a href="/treasures/magic-items.html">Magic Items (General)</a>
+				<a href="/treasures/armor-and-shields.html">Armor and Shields</a>
+				<a href="/treasures/misc.html">Miscellaneous Items</a>
+				<a href="/treasures/potions.html">Potions</a>
+				<a href="/treasures/rings.html">Rings</a>
+				<a href="/treasures/rods-staves-wands.html">Rods, Staves, Wands</a>
+				<a href="/treasures/scrolls-maps.html">Scrolls and Maps</a>
+				<a href="/treasures/swords.html">Swords</a>
+				<a href="/treasures/weapons.html">Weapons</a>
+				<a href="/treasures/sentient-swords.html">Sentient Swords</a>
+
 			</div>
 		</div>
 	</div>
 
-	<div id="mainContent">
-		<h1>Main Page</h1>
-
-		<h2>About Old-School Essentials</h2>
-		<p>
-			<i>Old-School Essentials</i>
-			is a role-playing game of fantastic adventure, monsters, and magic!
-		</p>
-		<p>
-			<b>Simple, robust rules.</b>
-			<i>Old-School Essentials</i>
-			has light, easily modified rules, putting the focus of play on shared imagination, improvisation, and fun. 
-		</p>
+<div class="mainContent">
+	<div class="column">
+		<!--
 		<p>
 			<b>Easy to learn and reference.</b>
 			<i>Old-School Essentials</i>
@@ -149,9 +165,30 @@
 			This online document provides a full reference for the Old-School Essentials Classic Fantasy rules (a complete rendition of the classic Basic / Expert game).
 		</p>
 
-		<h3>Any Issues</h3>
+		<h2>Support</h2>
 		<p>
-			Please email connorwillchris at EMAIL for any issues.
+			Found a mistake or encountered a problem?
+		</p>-->
+
+		<h1>lipu suli</h1>
+
+		<h2>sona e musi Old-School Essentials</h2>
+		<p>
+			<i>musi Old-School Essentials</i>
+			li musi e tan tawa musi e tan monsuta e tan wawa nasa.
+		</p>
+		<p>
+			<!-- TODO
+			<p>
+				<b>Simple, robust rules.</b>
+				<i>Old-School Essentials</i>
+				has light, easily modified rules, putting the focus of play on shared imagination, improvisation, and fun. 
+			</p>
+			-->
+			<b>pona e nasin.</b>
+			<i>musi Old-School Essentials</i>
+			li pona e nasin. 
 		</p>
 	</div>
+</div>
 </body>
