--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 			-->
 			<b>pona e nasin.</b>
 			<i>musi Old-School Essentials</i>
-			li pona e nasin. 
+			li pona e musi nasin. 
 		</p>
 	</div>
 </div>
