another bunch of changes

--- a/index.html
+++ b/index.html
@@ -2,27 +2,28 @@
 <!-- WIP TRANSLATING... -->
 <html lang="en">
 <head>
+
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<title>Old School Essentials - toki pona</title>
 
-	<link rel="stylesheet" href="/styles.css">
+	<link rel="stylesheet" href="/ose-toki-pona/styles.css">
 </head>
 <body>
 	<!-- MENU -->
 	<div class="navbar">
-		<a href="#">Home</a>
+		<a href="./index.html">Home</a>
 		<div class="dropdown">
 			<button class="dropbtn">
 				Characters
 			</button>
 			<div class="dropdown-content">
-				<a href="/characters/game-statistics.html">Game Statistics</a>
-				<a href="/characters/creating-a-character.html">Creating a Character</a>
-				<a href="/characters/ability-scores.html">Ability Scores</a>
-				<a href="/characters/alignment.html">Alignment</a>
-				<a href="/characters/languages.html">Languages</a>
-				<a href="/characters/advancement.html">Advancement</a>
+				<a href="/ose-toki-pona/characters/game-statistics.html">Game Statistics</a>
+				<a href="/ose-toki-pona/characters/creating-a-character.html">Creating a Character</a>
+				<a href="/ose-toki-pona/characters/ability-scores.html">Ability Scores</a>
+				<a href="/ose-toki-pona/characters/alignment.html">Alignment</a>
+				<a href="/ose-toki-pona/characters/languages.html">Languages</a>
+				<a href="/ose-toki-pona/characters/advancement.html">Advancement</a>
 			</div>
 		</div>
 		<div class="dropdown">
@@ -30,13 +31,13 @@
 				Classes
 			</button>
 			<div class="dropdown-content">
-				<a href="/classes/cleric.html">Cleric</a>
-				<a href="/classes/dwarf.html">Dwarf</a>
-				<a href="/classes/elf.html">Elf</a>
-				<a href="/classes/fighter.html">Fighter</a>
-				<a href="/classes/halfling.html">Halfling</a>
-				<a href="/classes/magic-user.html">Magic-User</a>
-				<a href="/classes/thief.html">Thief</a>
+				<a href="/ose-toki-pona/classes/cleric.html">Cleric</a>
+				<a href="/ose-toki-pona/classes/dwarf.html">Dwarf</a>
+				<a href="/ose-toki-pona/classes/elf.html">Elf</a>
+				<a href="/ose-toki-pona/classes/fighter.html">Fighter</a>
+				<a href="/ose-toki-pona/classes/halfling.html">Halfling</a>
+				<a href="/ose-toki-pona/classes/magic-user.html">Magic-User</a>
+				<a href="/ose-toki-pona/classes/thief.html">Thief</a>
 			</div>
 		</div>
 		<div class="dropdown">
@@ -44,17 +45,17 @@
 				Equipment &amp; Services
 			</button>
 			<div class="dropdown-content">
-				<a href="/equipment-services/wealth.html">Wealth</a>
-				<a href="/equipment-services/adventuring-gear.html">Adventuring Gear</a>
-				<a href="/equipment-services/weapons-and-armor.html">Weapons and Armor</a>
-				<a href="/equipment-services/mounts.html">Mounts</a>
-				<a href="/equipment-services/rules-for-vehicles.html">Rules for Vehicles</a>
-				<a href="/equipment-services/land-vehicles.html">Land Vehicles</a>
-				<a href="/equipment-services/water-vessels.html">Water Vessels</a>
-				<a href="/equipment-services/retainers.html">Retainers</a>
-				<a href="/equipment-services/mercenaries.html">Mercenaries</a>
-				<a href="/equipment-services/specialists.html">Specialists</a>
-				<a href="/equipment-services/strongholds.html">Strongholds</a>
+				<a href="/ose-toki-pona/equipment-services/wealth.html">Wealth</a>
+				<a href="/ose-toki-pona/equipment-services/adventuring-gear.html">Adventuring Gear</a>
+				<a href="/ose-toki-pona/equipment-services/weapons-and-armor.html">Weapons and Armor</a>
+				<a href="/ose-toki-pona/equipment-services/mounts.html">Mounts</a>
+				<a href="/ose-toki-pona/equipment-services/rules-for-vehicles.html">Rules for Vehicles</a>
+				<a href="/ose-toki-pona/equipment-services/land-vehicles.html">Land Vehicles</a>
+				<a href="/ose-toki-pona/equipment-services/water-vessels.html">Water Vessels</a>
+				<a href="/ose-toki-pona/equipment-services/retainers.html">Retainers</a>
+				<a href="/ose-toki-pona/equipment-services/mercenaries.html">Mercenaries</a>
+				<a href="/ose-toki-pona/equipment-services/specialists.html">Specialists</a>
+				<a href="/ose-toki-pona/equipment-services/strongholds.html">Strongholds</a>
 			</div>
 		</div>
 		<div class="dropdown">
@@ -62,11 +63,11 @@
 				Magic
 			</button>
 			<div class="dropdown-content">
-				<a href="/magic/rules.html">Rules</a>
-				<a href="/magic/spell-books.html">Spell Books</a>
-				<a href="/magic/magical-research.html">Magical Research</a>
-				<a href="/magic/cleric-spells.html">Cleric Spells</a>
-				<a href="/magic/magic-user-spells.html">Magic-User Spells</a>
+				<a href="/ose-toki-pona/magic/rules.html">Rules</a>
+				<a href="/ose-toki-pona/magic/spell-books.html">Spell Books</a>
+				<a href="/ose-toki-pona/magic/magical-research.html">Magical Research</a>
+				<a href="/ose-toki-pona/magic/cleric-spells.html">Cleric Spells</a>
+				<a href="/ose-toki-pona/magic/magic-user-spells.html">Magic-User Spells</a>
 			</div>
 		</div>
 
@@ -75,19 +76,19 @@
 				Adventures
 			</button>
 			<div class="dropdown-content">
-				<a href="/adventures/party-organisation.html">Party Organisation</a>
-				<a href="/adventures/time-weight-movement.html">Time, Weight, Movement</a>
-				<a href="/adventures/checks-damage-saves.html">Checks, Damage, Saves</a>
-				<a href="/adventures/hazards-challenges.html">Hazards and Challenges</a>
-				<a href="/adventures/dungeon-adventuring.html">Dungeon Adventuring</a>
-				<a href="/adventures/wilderness-adventuring.html">Wilderness Adventuring</a>
-				<a href="/adventures/waterborne-adventuring.html">Waterborne Adventuring</a>
-				<a href="/adventures/encounters.html">Encounters</a>
-				<a href="/adventures/evasion-pursuit.html">Evasion and Pursuit</a>
-				<a href="/adventures/combat.html">Combat</a>
-				<a href="/adventures/other-combat.html">Other Combat Issues</a>
-				<a href="/adventures/morale.html">Morale</a>
-				<a href="/adventures/comabt-tables.html">Combat Tables</a>
+				<a href="/ose-toki-pona/adventures/party-organisation.html">Party Organisation</a>
+				<a href="/ose-toki-pona/adventures/time-weight-movement.html">Time, Weight, Movement</a>
+				<a href="/ose-toki-pona/adventures/checks-damage-saves.html">Checks, Damage, Saves</a>
+				<a href="/ose-toki-pona/adventures/hazards-challenges.html">Hazards and Challenges</a>
+				<a href="/ose-toki-pona/adventures/dungeon-adventuring.html">Dungeon Adventuring</a>
+				<a href="/ose-toki-pona/adventures/wilderness-adventuring.html">Wilderness Adventuring</a>
+				<a href="/ose-toki-pona/adventures/waterborne-adventuring.html">Waterborne Adventuring</a>
+				<a href="/ose-toki-pona/adventures/encounters.html">Encounters</a>
+				<a href="/ose-toki-pona/adventures/evasion-pursuit.html">Evasion and Pursuit</a>
+				<a href="/ose-toki-pona/adventures/combat.html">Combat</a>
+				<a href="/ose-toki-pona/adventures/other-combat.html">Other Combat Issues</a>
+				<a href="/ose-toki-pona/adventures/morale.html">Morale</a>
+				<a href="/ose-toki-pona/adventures/comabt-tables.html">Combat Tables</a>
 			</div>
 		</div>
 		<div class="dropdown">
@@ -95,15 +96,15 @@
 				Running Adventures
 			</button>
 			<div class="dropdown-content">
-				<a href="/running-adventures/the-referees-role.html">The Referees Role</a>
-				<a href="/running-adventures/handling-pcs.html">Handling PCs</a>
-				<a href="/running-adventures/running-game.html">Running the Game</a>
-				<a href="/running-adventures/monsters-and-npcs.html">Monsters and NPCs</a>
-				<a href="/running-adventures/scenarios.html">Adventure Scenarios</a>
-				<a href="/running-adventures/dungeon.html">Designing a Dungeon</a>
-				<a href="/running-adventures/wilderness.html">Designing a Wilderness</a>
-				<a href="/running-adventures/base-town.html">Designing a Base Town</a>
-				<a href="/running-adventures/awarding-xp.html">Awarding XP</a>
+				<a href="/ose-toki-pona/running-adventures/the-referees-role.html">The Referees Role</a>
+				<a href="/ose-toki-pona/running-adventures/handling-pcs.html">Handling PCs</a>
+				<a href="/ose-toki-pona/running-adventures/running-game.html">Running the Game</a>
+				<a href="/ose-toki-pona/running-adventures/monsters-and-npcs.html">Monsters and NPCs</a>
+				<a href="/ose-toki-pona/running-adventures/scenarios.html">Adventure Scenarios</a>
+				<a href="/ose-toki-pona/running-adventures/dungeon.html">Designing a Dungeon</a>
+				<a href="/ose-toki-pona/running-adventures/wilderness.html">Designing a Wilderness</a>
+				<a href="/ose-toki-pona/running-adventures/base-town.html">Designing a Base Town</a>
+				<a href="/ose-toki-pona/running-adventures/awarding-xp.html">Awarding XP</a>
 			</div>
 		</div>
 		<div class="dropdown">
@@ -111,12 +112,12 @@
 				Monsters
 			</button>
 			<div class="dropdown-content">
-				<a href="/monsters/general.html">General</a>
-				<a href="/monsters/descriptions.html">Monster Descriptions</a>
-				<a href="/monsters/dungeon-encounters.html">Dungeon Encounters</a>
-				<a href="/monsters/wilderness-encounters.html">Wilderness Encounters</a>
-				<a href="/monsters/adventuring-parties.html">Adventuring Parties</a>
-				<a href="/monsters/stronghold-encounters.html">Stronghold Encounters</a>
+				<a href="/ose-toki-pona/monsters/general.html">General</a>
+				<a href="/ose-toki-pona/monsters/descriptions.html">Monster Descriptions</a>
+				<a href="/ose-toki-pona/monsters/dungeon-encounters.html">Dungeon Encounters</a>
+				<a href="/ose-toki-pona/monsters/wilderness-encounters.html">Wilderness Encounters</a>
+				<a href="/ose-toki-pona/monsters/adventuring-parties.html">Adventuring Parties</a>
+				<a href="/ose-toki-pona/monsters/stronghold-encounters.html">Stronghold Encounters</a>
 			</div>
 		</div>
 
@@ -125,20 +126,19 @@
 				Treasures
 			</button>
 			<div class="dropdown-content">
-				<a href="/treasures/placing-treasure.html">Placing Treasure</a>
-				<a href="/treasures/treasure-types.html">Treasure Types</a>
-				<a href="/treasures/gems-and-jewellery.html">Gems and Jewellery</a>
-				<a href="/treasures/magic-items.html">Magic Items (General)</a>
-				<a href="/treasures/armor-and-shields.html">Armor and Shields</a>
-				<a href="/treasures/misc.html">Miscellaneous Items</a>
-				<a href="/treasures/potions.html">Potions</a>
-				<a href="/treasures/rings.html">Rings</a>
-				<a href="/treasures/rods-staves-wands.html">Rods, Staves, Wands</a>
-				<a href="/treasures/scrolls-maps.html">Scrolls and Maps</a>
-				<a href="/treasures/swords.html">Swords</a>
-				<a href="/treasures/weapons.html">Weapons</a>
-				<a href="/treasures/sentient-swords.html">Sentient Swords</a>
-
+				<a href="/ose-toki-pona/treasures/placing-treasure.html">Placing Treasure</a>
+				<a href="/ose-toki-pona/treasures/treasure-types.html">Treasure Types</a>
+				<a href="/ose-toki-pona/treasures/gems-and-jewellery.html">Gems and Jewellery</a>
+				<a href="/ose-toki-pona/treasures/magic-items.html">Magic Items (General)</a>
+				<a href="/ose-toki-pona/treasures/armor-and-shields.html">Armor and Shields</a>
+				<a href="/ose-toki-pona/treasures/misc.html">Miscellaneous Items</a>
+				<a href="/ose-toki-pona/treasures/potions.html">Potions</a>
+				<a href="/ose-toki-pona/treasures/rings.html">Rings</a>
+				<a href="/ose-toki-pona/treasures/rods-staves-wands.html">Rods, Staves, Wands</a>
+				<a href="/ose-toki-pona/treasures/scrolls-maps.html">Scrolls and Maps</a>
+				<a href="/ose-toki-pona/treasures/swords.html">Swords</a>
+				<a href="/ose-toki-pona/treasures/weapons.html">Weapons</a>
+				<a href="/ose-toki-pona/treasures/sentient-swords.html">Sentient Swords</a>
 			</div>
 		</div>
 	</div>
