--- a/classes/cleric.html
+++ b/classes/cleric.html
@@ -5,6 +5,18 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<title>Old School Essentials - toki pona</title>
 
+    <!--
+        (you could easily use “jan” instead of “ijo”, I just started there for simplicity)
+
+        - ijo sewi / ijo pona: divine being / being of benefit
+        - ijo kiwen insa / ijo pi pali kiwen: inside rock being / being of rock-working
+        - ijo suli: tall being (suli also meaning “important” amuses me as elves tend to be depicted self-important)
+        - ijo utala: being of battle
+        - ijo lili: little being
+        - ijo pi wawa nasa: being of strange power
+        - ijo len/ ijo pi kama jo: hidden being / being of taking (“becoming having”)
+    -->
+
     <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
