--- a/characters/game-statistics.html
+++ b/characters/game-statistics.html
@@ -7,5 +7,13 @@
 	<title>Old School Essentials - toki pona</title>
 </head>
 <body>
-    
+    <!--
+        Strength: wawa - W
+        Dexterity: tawa - T
+        Constitution: sijelo - S(i)
+        Intelligence: sona - So
+        Wisdom: pilin - P
+        Charisma: lawa - L
+    -->
+
 </body>
