--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- WIP TRANSLATING... -->
+<!-- TRANSLATING... -->
 <html lang="en">
 <head>
 
@@ -15,7 +15,8 @@
 		<a href="./index.html">Home</a>
 		<div class="dropdown">
 			<button class="dropbtn">
-				Characters
+				<!--Characters-->
+				jan musi
 			</button>
 			<div class="dropdown-content">
 				<a href="/ose-toki-pona/characters/game-statistics.html">Game Statistics</a>
@@ -71,9 +72,21 @@
 			</div>
 		</div>
 
+		<!--
+        (you could easily use “jan” instead of “ijo”, I just started there for simplicity)
+
+        - ijo sewi / ijo pona: divine being / being of benefit
+        - ijo kiwen insa / ijo pi pali kiwen: inside rock being / being of rock-working
+        - ijo suli: tall being (suli also meaning “important” amuses me as elves tend to be depicted self-important)
+        - ijo utala: being of battle
+        - ijo lili: little being
+        - ijo pi wawa nasa: being of strange power
+        - ijo len/ ijo pi kama jo: hidden being / being of taking (“becoming having”)
+    -->
 		<div class="dropdown">
 			<button class="dropbtn">
-				Adventures
+				<!--Classes-->
+				pali jan
 			</button>
 			<div class="dropdown-content">
 				<a href="/ose-toki-pona/adventures/party-organisation.html">Party Organisation</a>
@@ -146,20 +159,6 @@
 <div class="mainContent">
 	<div class="column">
 		<!--
-		<p>
-			<b>Easy to learn and reference.</b>
-			<i>Old-School Essentials</i>
-			is meticulously edited and laid out, with the aim of maximising ease of reference during play. Everything is logically organised and presented in a quick-to-read format based on “control panels” — side-by-side pages presenting a single topic in its entirety.
-		</p>
-		<p>
-			<b>Compatible with decades of material.</b>
-			<i>Old-School Essentials</i>
-			is based on the classic 1980s Basic / Expert rules (B/X), the most popular edition of the game among connoisseurs of old-school RPGs. All material written for the B/X rules over the last four decades can be used with Old-School Essentials, without any conversion effort whatsoever!
-		</p>
-		<p>
-			<b>100% old-school rules, 100% modern design!</b>
-		</p>
-
 		<h2>About the System Reference Document (SRD)</h2>
 		<p>
 			This online document provides a full reference for the Old-School Essentials Classic Fantasy rules (a complete rendition of the classic Basic / Expert game).
@@ -174,20 +173,47 @@
 
 		<h2>sona e musi Old-School Essentials</h2>
 		<p>
+			<!--
+				<i>Old-School Essentials</i>
+				is a role-playing game of fantastic adventure, monsters, and magic!
+			-->
 			<i>musi Old-School Essentials</i>
-			li musi e tan tawa musi e tan monsuta e tan wawa nasa.
+			li musi e tan tawa musi e monsuta e wawa nasa.
 		</p>
 		<p>
-			<!-- TODO
-			<p>
+			<!--
 				<b>Simple, robust rules.</b>
 				<i>Old-School Essentials</i>
 				has light, easily modified rules, putting the focus of play on shared imagination, improvisation, and fun. 
-			</p>
 			-->
 			<b>pona e nasin.</b>
 			<i>musi Old-School Essentials</i>
-			li pona e musi nasin. 
+			li pona e musi nasin.
+			lawa wawa li sitelen lawa.
+		</p>
+		<p>
+			<!--
+				<b>Easy to learn and reference.</b>
+				<i>Old-School Essentials</i>
+				is meticulously edited and laid out, with the aim of maximising ease of reference during play. Everything is logically organised and presented in a quick-to-read format based on “control panels” — side-by-side pages presenting a single topic in its entirety.
+			-->
+			<b>pona li kama sona li lipu sona.</b>
+			<i>musi Old-School Essentials</i>
+			li ante tan lipu sona.
+			musi li tan pona.
+			ala li pona e tan lipu sona.
+		</p>
+		<p>
+			<!--
+				<b>Compatible with decades of material.</b>
+				<i>Old-School Essentials</i>
+				is based on the classic 1980s Basic / Expert rules (B/X), the most popular edition of the game among connoisseurs of old-school RPGs. All material written for the B/X rules over the last four decades can be used with Old-School Essentials, without any conversion effort whatsoever!
+			-->
+			<b>ken kepeken e lipu pi tenpo sike mute</b>
+			<i>musi Old-School Essentials</i>
+			li kepeken e Classic 1980s Basix/Expert (B/X) D&amp;D.
+			
+			musi ni la lipu ali tan tenpo sike mute mute li ken kepeken.
 		</p>
 	</div>
 </div>
