another change to index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- WIP TRANSLATING... -->
+<!-- WIP TRANSLATING -->
 <html lang="en">
 <head>
 
@@ -147,16 +147,6 @@
 	<div class="column">
 		<!--
 		<p>
-			<b>Easy to learn and reference.</b>
-			<i>Old-School Essentials</i>
-			is meticulously edited and laid out, with the aim of maximising ease of reference during play. Everything is logically organised and presented in a quick-to-read format based on “control panels” — side-by-side pages presenting a single topic in its entirety.
-		</p>
-		<p>
-			<b>Compatible with decades of material.</b>
-			<i>Old-School Essentials</i>
-			is based on the classic 1980s Basic / Expert rules (B/X), the most popular edition of the game among connoisseurs of old-school RPGs. All material written for the B/X rules over the last four decades can be used with Old-School Essentials, without any conversion effort whatsoever!
-		</p>
-		<p>
 			<b>100% old-school rules, 100% modern design!</b>
 		</p>
 
@@ -174,11 +164,14 @@
 
 		<h2>sona e musi Old-School Essentials</h2>
 		<p>
+			<!--
+				Old-School Essentials is a role-playing game of fantastic adventure, monsters, and magic!
+			-->
 			<i>musi Old-School Essentials</i>
 			li musi e tan tawa musi e tan monsuta e tan wawa nasa.
 		</p>
 		<p>
-			<!-- TODO
+			<!--
 			<p>
 				<b>Simple, robust rules.</b>
 				<i>Old-School Essentials</i>
@@ -187,7 +180,27 @@
 			-->
 			<b>pona e nasin.</b>
 			<i>musi Old-School Essentials</i>
-			li pona e musi nasin. 
+			li pona e musi nasin.
+			musi li lawa wawa e sitelen lawa.
+		</p>
+		<p>
+			<!-- TODO
+			<b>Easy to learn and reference.</b>
+			<i>Old-School Essentials</i>
+			is meticulously edited and laid out, with the aim of maximising ease of reference during play. Everything is logically organised and presented in a quick-to-read format based on “control panels” — side-by-side pages presenting a single topic in its entirety.
+			-->
+			<b>musi sona li pona.</b>
+			<i>musi Old-School Essentials</i>
+			li 
+		</p>
+
+		<p>
+			<!-- TODO
+
+			<b>Compatible with decades of material.</b>
+			<i>Old-School Essentials</i>
+			is based on the classic 1980s Basic / Expert rules (B/X), the most popular edition of the game among connoisseurs of old-school RPGs. All material written for the B/X rules over the last four decades can be used with Old-School Essentials, without any conversion effort whatsoever!
+			-->
 		</p>
 	</div>
 </div>
