--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 				<i>Old-School Essentials</i>
 				is based on the classic 1980s Basic / Expert rules (B/X), the most popular edition of the game among connoisseurs of old-school RPGs. All material written for the B/X rules over the last four decades can be used with Old-School Essentials, without any conversion effort whatsoever!
 			-->
-			<b>ken kepeken e lipu pi tenpo sike mute</b>
+			<b>ken kepeken e lipu pi tenpo sike mute.</b>
 			<i>musi Old-School Essentials</i>
 			li kepeken e Classic 1980s Basix/Expert (B/X) D&amp;D.
 			
