changes to index

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <!-- WIP TRANSLATING -->
 <html lang="en">
 <head>
-
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<title>Old School Essentials - toki pona</title>
@@ -19,14 +18,43 @@
 				jan musi
 			</button>
 			<div class="dropdown-content">
-				<a href="/ose-toki-pona/characters/game-statistics.html">Game Statistics</a>
-				<a href="/ose-toki-pona/characters/creating-a-character.html">Creating a Character</a>
-				<a href="/ose-toki-pona/characters/ability-scores.html">Ability Scores</a>
-				<a href="/ose-toki-pona/characters/alignment.html">Alignment</a>
-				<a href="/ose-toki-pona/characters/languages.html">Languages</a>
-				<a href="/ose-toki-pona/characters/advancement.html">Advancement</a>
+				<a href="/ose-toki-pona/characters/game-statistics.html">
+					<!--Game Statistics-->
+					musi nanpa
+				</a>
+				<a href="/ose-toki-pona/characters/creating-a-character.html">
+					<!-- Creating a Character -->
+					 pali e musi jan
+				</a>
+				<a href="/ose-toki-pona/characters/ability-scores.html">
+					<!-- Ability Scores -->
+					 nanpa ken
+				</a>
+				<a href="/ose-toki-pona/characters/alignment.html">
+					<!-- Alignment -->
+					jan nasin
+				</a>
+				<a href="/ose-toki-pona/characters/languages.html">
+					<!-- Languages -->
+					toki mute
+				</a>
+				<a href="/ose-toki-pona/characters/advancement.html">
+					<!-- Advancement -->
+
+				</a>
 			</div>
 		</div>
+		<!--
+        (you could easily use “jan” instead of “ijo”, I just started there for simplicity)
+
+        - ijo sewi / ijo pona: divine being / being of benefit
+        - ijo kiwen insa / ijo pi pali kiwen: inside rock being / being of rock-working
+        - ijo suli: tall being (suli also meaning “important” amuses me as elves tend to be depicted self-important)
+        - ijo utala: being of battle
+        - ijo lili: little being
+        - ijo pi wawa nasa: being of strange power
+        - ijo len/ ijo pi kama jo: hidden being / being of taking (“becoming having”)
+    	-->
 		<div class="dropdown">
 			<button class="dropbtn">
 				Classes
@@ -71,18 +99,6 @@
 				<a href="/ose-toki-pona/magic/magic-user-spells.html">Magic-User Spells</a>
 			</div>
 		</div>
-
-		<!--
-        (you could easily use “jan” instead of “ijo”, I just started there for simplicity)
-
-        - ijo sewi / ijo pona: divine being / being of benefit
-        - ijo kiwen insa / ijo pi pali kiwen: inside rock being / being of rock-working
-        - ijo suli: tall being (suli also meaning “important” amuses me as elves tend to be depicted self-important)
-        - ijo utala: being of battle
-        - ijo lili: little being
-        - ijo pi wawa nasa: being of strange power
-        - ijo len/ ijo pi kama jo: hidden being / being of taking (“becoming having”)
-    -->
 		<div class="dropdown">
 			<button class="dropbtn">
 				<!--Classes-->
