--- a/classes/cleric.html
+++ b/classes/cleric.html
@@ -4,7 +4,6 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<title>Old School Essentials - toki pona</title>
-
     <!--
         (you could easily use “jan” instead of “ijo”, I just started there for simplicity)
 
@@ -17,40 +16,44 @@
         - ijo len/ ijo pi kama jo: hidden being / being of taking (“becoming having”)
     -->
 
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <h1>Cleric</h1>
+    <h1><!--Cleric-->jan sewi</h1>
 
     <table>
-        <caption>Cleric Information</caption>
+        <caption>sona pi jan sewi</caption>
         <tr>
-            <td><b>Requirements</b></td>
-            <td>None</td>
+            <td><b><!--Requirements-->o wile e nanpa musi</b></td>
+            <td><!--None-->ala</td>
         </tr>
         <tr>
-            <td><b>Prime Requisite</b></td>
-            <td>WIS</td>
+            <td><b><!--Prime Requisite-->nanpa musi suli</b></td>
+            <td><!--WIS-->WISDOM</td>
         </tr>
         <tr>
-            <td><b>Hit Dice</b></td>
-            <td>1d6</td>
+            <td><b><!--Hit Dice-->sijelo pi leko nanpa</b></td>
+            <td>1K6</td>
         </tr>
         <tr>
             <td><b>Maximum Level</b></td>
             <td>14</td>
         </tr>
         <tr>
-            <td><b>Armor</b></td>
+            <td><b><!--Armor-->sijelo len</b></td>
             <td>Any, including shields</td>
         </tr>
         <tr>
-            <td><b>Weapons</b></td>
+            <td><b><!--Weapons-->ilo utala mute</b></td>
             <td>Any blunt weapons</td>
         </tr>
         <tr>
-            <td><b>Languages</b></td>
+            <td><b>toki mute</b></td>
             <td>Alignment, Common</td>
+            <!--
+            ALIGNMENT - nasin toki
+            COMMON    - jan toki ...?
+            -->
         </tr>
     </table>
 
