--- a/index.html
+++ b/index.html
@@ -11,37 +11,16 @@
 <body>
 	<!-- MENU -->
 	<div class="navbar">
-		<a href="./index.html">Home</a>
+		<a href="./index.html">lipu suli</a>
 		<div class="dropdown">
-			<button class="dropbtn">
-				<!--Characters-->
-				jan musi
-			</button>
+			<button class="dropbtn"><!--Characters-->jan musi</button>
 			<div class="dropdown-content">
-				<a href="/ose-toki-pona/characters/game-statistics.html">
-					<!--Game Statistics-->
-					musi nanpa
-				</a>
-				<a href="/ose-toki-pona/characters/creating-a-character.html">
-					<!-- Creating a Character -->
-					 pali e musi jan
-				</a>
-				<a href="/ose-toki-pona/characters/ability-scores.html">
-					<!-- Ability Scores -->
-					 nanpa ken
-				</a>
-				<a href="/ose-toki-pona/characters/alignment.html">
-					<!-- Alignment -->
-					jan nasin
-				</a>
-				<a href="/ose-toki-pona/characters/languages.html">
-					<!-- Languages -->
-					toki mute
-				</a>
-				<a href="/ose-toki-pona/characters/advancement.html">
-					<!-- Advancement -->
-
-				</a>
+				<a href="/ose-toki-pona/characters/game-statistics.html"><!--Game Statistics-->nanpa musi</a>
+				<a href="/ose-toki-pona/characters/creating-a-character.html"><!-- Creating a Character -->o pali e jan musi</a>
+				<a href="/ose-toki-pona/characters/ability-scores.html"><!-- Ability Scores -->nanpa ken</a>
+				<a href="/ose-toki-pona/characters/alignment.html"><!-- Alignment -->jan nasin</a>
+				<a href="/ose-toki-pona/characters/languages.html"><!-- Languages -->toki mute</a>
+				<a href="/ose-toki-pona/characters/advancement.html"><!-- Advancement -->Advancement</a>
 			</div>
 		</div>
 		<!--
@@ -56,23 +35,19 @@
         - ijo len/ ijo pi kama jo: hidden being / being of taking (“becoming having”)
     	-->
 		<div class="dropdown">
-			<button class="dropbtn">
-				Classes
-			</button>
+			<button class="dropbtn">pali jan</button>
 			<div class="dropdown-content">
-				<a href="/ose-toki-pona/classes/cleric.html">Cleric</a>
-				<a href="/ose-toki-pona/classes/dwarf.html">Dwarf</a>
-				<a href="/ose-toki-pona/classes/elf.html">Elf</a>
-				<a href="/ose-toki-pona/classes/fighter.html">Fighter</a>
-				<a href="/ose-toki-pona/classes/halfling.html">Halfling</a>
-				<a href="/ose-toki-pona/classes/magic-user.html">Magic-User</a>
-				<a href="/ose-toki-pona/classes/thief.html">Thief</a>
+				<a href="/ose-toki-pona/classes/cleric.html">jan sewi</a>
+				<a href="/ose-toki-pona/classes/dwarf.html">jan pi pali kiwen</a>
+				<a href="/ose-toki-pona/classes/elf.html">jan suli</a>
+				<a href="/ose-toki-pona/classes/fighter.html">jan utala</a>
+				<a href="/ose-toki-pona/classes/halfling.html">jan lili</a>
+				<a href="/ose-toki-pona/classes/magic-user.html">jan wawa nasa</a>
+				<a href="/ose-toki-pona/classes/thief.html">jan len</a>
 			</div>
 		</div>
 		<div class="dropdown">
-			<button class="dropbtn">
-				Equipment &amp; Services
-			</button>
+			<button class="dropbtn">Equipment &amp; Services</button>
 			<div class="dropdown-content">
 				<a href="/ose-toki-pona/equipment-services/wealth.html">Wealth</a>
 				<a href="/ose-toki-pona/equipment-services/adventuring-gear.html">Adventuring Gear</a>
@@ -88,9 +63,7 @@
 			</div>
 		</div>
 		<div class="dropdown">
-			<button class="dropbtn">
-				Magic
-			</button>
+			<button class="dropbtn">Magic</button>
 			<div class="dropdown-content">
 				<a href="/ose-toki-pona/magic/rules.html">Rules</a>
 				<a href="/ose-toki-pona/magic/spell-books.html">Spell Books</a>
@@ -100,10 +73,7 @@
 			</div>
 		</div>
 		<div class="dropdown">
-			<button class="dropbtn">
-				<!--Classes-->
-				pali jan
-			</button>
+			<button class="dropbtn"><!--Classes-->jan musi mute</button>
 			<div class="dropdown-content">
 				<a href="/ose-toki-pona/adventures/party-organisation.html">Party Organisation</a>
 				<a href="/ose-toki-pona/adventures/time-weight-movement.html">Time, Weight, Movement</a>
@@ -121,9 +91,7 @@
 			</div>
 		</div>
 		<div class="dropdown">
-			<button class="dropbtn">
-				Running Adventures
-			</button>
+			<button class="dropbtn">Running Adventures</button>
 			<div class="dropdown-content">
 				<a href="/ose-toki-pona/running-adventures/the-referees-role.html">The Referees Role</a>
 				<a href="/ose-toki-pona/running-adventures/handling-pcs.html">Handling PCs</a>
@@ -137,9 +105,7 @@
 			</div>
 		</div>
 		<div class="dropdown">
-			<button class="dropbtn">
-				Monsters
-			</button>
+			<button class="dropbtn">Monsters</button>
 			<div class="dropdown-content">
 				<a href="/ose-toki-pona/monsters/general.html">General</a>
 				<a href="/ose-toki-pona/monsters/descriptions.html">Monster Descriptions</a>
@@ -151,9 +117,7 @@
 		</div>
 
 		<div class="dropdown">
-			<button class="dropbtn">
-				Treasures
-			</button>
+			<button class="dropbtn">Treasures</button>
 			<div class="dropdown-content">
 				<a href="/ose-toki-pona/treasures/placing-treasure.html">Placing Treasure</a>
 				<a href="/ose-toki-pona/treasures/treasure-types.html">Treasure Types</a>
