--- a/classes/cleric.html
+++ b/classes/cleric.html
@@ -129,7 +129,7 @@
     <table>
         <caption>Turning the Undead</caption>
         <tr>
-            <th colspan="9">Hit Dice of Monster Type</th>
+            <th colspan="9">Hit Dice of Monster Type†</th>
         </tr>
         <tr>
             <th>Level</th>
@@ -166,5 +166,103 @@
             <td>11</td>
             <td>-</td><td>-</td><td>-</td>
         </tr>
+        <tr>
+            <td>4</td>
+            <td>D</td>
+            <td>T</td>
+            <td>T</td>
+            <td>7</td>
+            <td>9</td>
+            <td>11</td>
+            <td>-</td><td>-</td>
+        </tr>
+        <tr>
+            <td>5</td>
+            <td>D</td>
+            <td>D</td>
+            <td>T</td>
+            <td>T</td>
+            <td>7</td>
+            <td>9</td>
+            <td>11</td>
+            <td>-</td>
+        </tr>
+        <tr>
+            <td>6</td>
+            <td>D</td>
+            <td>D</td>
+            <td>D</td>
+            <td>T</td>
+            <td>T</td>
+            <td>7</td>
+            <td>9</td>
+            <td>11</td>
+            <!--<td>-</td>-->
+        </tr>
+        <tr>
+            <td>7</td>
+            <td>D</td>
+            <td>D</td>
+            <td>D</td>
+            <td>D</td>
+            <td>T</td>
+            <td>T</td>
+            <td>7</td>
+            <td>9</td>
+        </tr>
+        <tr>
+            <td>8</td>
+            <td>D</td>
+            <td>D</td>
+            <td>D</td>
+            <td>D</td>
+            <td>D</td>
+            <td>T</td>
+            <td>T</td>
+            <td>7</td>
+        </tr>
+        <tr>
+            <td>9</td>
+            <td>D</td>
+            <td>D</td>
+            <td>D</td>
+            <td>D</td>
+            <td>D</td>
+            <td>D</td>
+            <td>T</td>
+            <td>T</td>
+        </tr>
+        <tr>
+            <td>10</td>
+            <td>D</td>
+            <td>D</td>
+            <td>D</td>
+            <td>D</td>
+            <td>D</td>
+            <td>D</td>
+            <td>T</td>
+        </tr>
+        <tr>
+            <td>11+</td>
+            <td>D</td>
+            <td>D</td>
+            <td>D</td>
+            <td>D</td>
+            <td>D</td>
+            <td>D</td>
+            <td>D</td>
+        </tr>
     </table>
+
+    <p>
+        * 2 HD monsters with a
+        special ability
+        (i.e. with an asterisk next to their HD rating,
+        in the monster description).
+    </p>
+    <p>
+        † At the referee's option, the table may be expanded
+        to include more powerful types of undead
+        monsters.
+    </p>
 </body>
